revision history for NetPacket

0.42.1
    * Fix UDP checksum. Thanks to Hal Finkel. (RT#56235)

0.42.0 March 25th, 2010
    * Updated license to Artistic 2.0

0.41.1
    * Fixed bug 37931: export of ICMP_MASKREQ
    * Fixed UDP and TCP checksums for odd-sized packets
    * Fixed import from NetPacket::UDP
    * Fixed bug 37931: export of ICMP_MASKREQ
    * Added git repo and bug tracking info to META.yml

0.41_0
    * Fixed bug 18941 - NetPacket::IP includes trailing 
        trash bytes in $ip->{data}
    * Fixed bug 7010 - IP flags field lost in IP::encode()
    * Added Build.PL 
    * Moved history off the README file into this one (Changes)
    * Moved module structure to /lib
    * Version now gathered from NetPacket.pm
    * META.yml added to MANIFEST
    * Added myself (Yanick) as author
    * Switched to major.minor.revision version notation

0.04
    * Checksum offset fix, thanks to J. Hoagland for pointing this out.